roles/taskmngr-kubernetes/templates/common.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing
  labels:
    app: taskmngr
